kubernetes/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: playdep 

spec:
  replicas: 1
  
  selector:
    matchLabels:
      app: playdep
  
  template:
    
    metadata:
      labels:
        app: playdep
    
    spec:
      containers:
      - name: playdep
        image: playdash
        ports:
        - containerPort: 5000
          protocol: TCP
        imagePullPolicy: Never
        resources:
          limits:
            cpu: 0.2m
            memory: 128Mi
