kubernetes/service.yml
apiVersion: v1
kind: Service 
metadata:
  name: playservice 

spec: # clusterIP, loadBalancer ( CLOUD LOADBALANCER ), nodePort
  selector:
    app: playdep
